# Built following tutorial: https://packaging.python.org/en/latest/tutorials/packaging-projects/
# Python dependencies (build and twine) installed in .venv.
# Utilizing ~/.pypirc file for settings. Will require /etc/hosts to be updated with pypi.baked.com to point to build server.
#   - python -m build
#   - python -m twine --repository baked dist/*
#   - pip install baked-superiorsix --index-url http://pypi.baked.com/simple --trusted-host pypi.baked.com
# Current strategy is to supply username and password with the twine command.


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baked-superiorsix"
version = "0.0.4"
authors = [
  { name="Martin Baker", email="baker.bsc@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MartianBerk/superiorsix"
"Bug Tracker" = "https://github.com/MartianBerk/superiorsix/issues"

[project.scripts]
run = "baked.supersix.supersix:main"